--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/db_happyflowers?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=admin
 spring.datasource.password=admin
+
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
