--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <version>20090211</version>
         </dependency>
 
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
+
     </dependencies>
 
 
